--- a/obelix-webshop/build.gradle
+++ b/obelix-webshop/build.gradle
@@ -7,6 +7,9 @@ dependencies {
 	implementation project(':obelix-common')
 	implementation project(':obelix-quarry-api')
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	implementation 'io.micrometer:micrometer-tracing-bridge-otel'
+	implementation 'io.opentelemetry:opentelemetry-exporter-zipkin'
 
 	testImplementation testFixtures(project(':obelix-common'))
 }
