--- a/obelix-webshop/src/main/resources/application.yaml
+++ b/obelix-webshop/src/main/resources/application.yaml
@@ -5,3 +5,11 @@ spring:
     active: common
 server:
   port: 8080
+management:
+  tracing:
+    sampling:
+      probability: 1.0
+logging:
+  pattern:
+    correlation: "[${spring.application.name:},%X{traceId:-},%X{spanId:-}] "
+  include-application-name: false
